fix dark mode menu

--- a/webapp/app/styles/root.css
+++ b/webapp/app/styles/root.css
@@ -115,6 +115,9 @@ body {
   &:hover,
   &:focus {
     background-color: var(--yellow);
+    @media (prefers-color-scheme: dark) {
+      background-color: var(--dark-midground);
+    }
   }
 }
 .menu-bars {
@@ -125,6 +128,9 @@ body {
   height: 3px;
   background-color: var(--purple);
   margin: 4px 0;
+  @media (prefers-color-scheme: dark) {
+    background-color: var(--yellow);
+  }
 }
 
 @media (max-width: 440px) {
@@ -139,8 +145,12 @@ body {
     min-width: 50%;
     background: white;
     border: 1px solid var(--foreground);
-    z-index: 0;
+    z-index: 3;
     border-radius: 4px;
+    @media (prefers-color-scheme: dark) {
+      background-color: var(--dark-midground);
+      border: 1px solid var(--dark-farground);
+    }
   }
   .main-nav a {
     display: block;
